--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"          # or keep 3.13 if intentional
 dependencies = [
     "fastapi>=0.115.12",
     "httpx>=0.28.1",
+    "judgy>=0.1.0",
     "litellm>=1.70.2",
     "pandas>=2.2.3",
     "python-dotenv>=1.1.0",
